# InterviewHawk

./: .gitignore  LICENSE  README.md  package-lock.json  requirements.txt
backend/: create_admin.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/api/: admin.py  ai_service.py  models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/interview_hawk/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: FaceMonitor.jsx  InterviewHistory.jsx  InterviewRoom.jsx  LandingPage.jsx  Login.jsx  ResumeUploader.jsx
interviewhawk-mobile/: app.json  package-lock.json  package.json
interviewhawk-mobile/app/(tabs)/: index.tsx
